# football-news-hub

./: .gitignore  fetch_all_reports.py  fetch_report.py  fetch_report_urls.py  pyproject.toml  test_arsenal.py
ai-llm-provider-docs/: minimax-docs.md  minimax-text-2-audio-docs.md
config/: sources.yaml
data/: arsenal_matches.json  arsenal_season_review_2025-26.md  arsenal_venues_2025-26.json  articles.db  articles.json
data/arsenal_reports/: arsenal_report_2025-07-23_ac-milan.json  arsenal_report_2025-07-27_newcastle-united.json  arsenal_report_2025-07-31_tottenham-hotspur.json  arsenal_report_2025-08-06_villarreal-cf.json  arsenal_report_2025-08-09_athletic-club.json  arsenal_report_2025-08-17_manchester-united.json  arsenal_report_2025-08-23_leeds-united.json  arsenal_report_2025-08-31_liverpool.json  arsenal_report_2025-09-13_nottingham-forest.json  arsenal_report_2025-09-16_athletic-club.json  arsenal_report_2025-09-21_manchester-city.json  arsenal_report_2025-09-24_port-vale.json  arsenal_report_2025-09-28_newcastle-united.json  arsenal_report_2025-10-01_olympiacos.json  arsenal_report_2025-10-04_west-ham-united.json  arsenal_report_2025-10-18_fulham.json  arsenal_report_2025-10-21_atletico-madrid.json  arsenal_report_2025-10-26_crystal-palace.json  arsenal_report_2025-10-29_brighton-hove-albion.json  arsenal_report_2025-11-01_burnley.json  arsenal_report_2025-11-04_slavia-prague.json  arsenal_report_2025-11-08_sunderland.json  arsenal_report_2025-11-23_tottenham-hotspur.json  arsenal_report_2025-11-26_bayern-munich.json  arsenal_report_2025-11-30_chelsea.json  (+40 more)
(+16 files in other folders)
